--- a/estilos/estiloparidad.css
+++ b/estilos/estiloparidad.css
@@ -1,16 +1,23 @@
 
 /*---------------------------------------------------------------------------------*/
 
+* {
+    box-sizing: border-box;
+}
+
 body {
+
     font-family: Arial, sans-serif;
     background-color: #F4F4F4;
     color: #333333;
     margin: 0;
     padding: 0;
-    line-height: 1.6;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
+    line-height: 1.6;
+    min-height: 100vh;
+    overflow-x: hidden;
+    text-align: justify;
 }
 
 .encabezado {
@@ -18,50 +25,80 @@ body {
     color: #FFFFFF;
     text-align: center;
     margin-bottom: 20px;
+    padding: 0 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.imagen_principal {
-    text-align: center;
-    margin: 20px 0;
+.contenedor_texto_imagen {
+    display: grid;
+    grid-template-columns: 1.5fr auto;
+    gap: 0.75em;
+    align-items: start;
 }
 
-.imagen_paridad {
-    max-width: 50%;
+.imagen1 {
+    width: 100%;
+    max-width: 170px;
     height: auto;
-    border-radius: 8px;
+    display: block;
+    align-self: center;
+    border-radius: 5px;
+    grid-column: 2;
+}
+
+.imagen2 {
+    width: 100%;
+    max-width: 90px;
+    height: auto;
+    display: block;
+    align-self: center;
+    border-radius: 5px;
+    grid-column: 2;
 }
 
 .contenido_principal {
+    width: 100%;
     padding: 20px;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
+    margin-left: 100px;
 }
 
 .titulo_principal {
-    color: #FFFFFF;
     font-size: 2.5em;
+    font-weight:800;
+    margin:10px;
+    color: #FFFFFF;
 }
 
 .titulo_seccion {
+    font-size: 1.4em;
     color: #6A1B9A;
     margin-bottom: 10px;
-    font-size: 1.4em;
+}
+
+.texto {
+    grid-column: 1;
+    font-size: 1em;
+    color: #333333;
+    margin: 0;
 }
 
 .caja_contenido {
     background-color: #FFFFFF;
-    border-radius: 8px;
-    padding: 0px 20px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-left: 5px solid #6A1B9A;
-    margin-bottom: 50px;
+    border-radius: 8px;
+    padding: 0 20px 20px 20px;
+    margin-bottom: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    margin-right: 120px;
 }
 
 .texto_destacado_purpura {
-    color: #6A1B9A;
     font-weight: bold;
+    color: #6A1B9A;
 }
 
 .pie_de_pagina {
@@ -78,26 +115,50 @@ body {
 
 .lista {
     padding-left: 30px;
-    margin-top: 15px;
-    margin-bottom: 10px;
+    margin: 15px 0 10px;
 }
 
 .elemento_lista {
-    margin-bottom: 10px;
     color: #6A1B9A;
-}
-
-.texto {
-    color: #333333;
     margin-bottom: 10px;
-    font-size: 0.9em;
 }
 
 .subtitulo {
     font-size: 1em;
     color: #FFFFFF;
-    margin-top: 10px;
 }
-.conte{
-    margin: 0 100px 0 100px;
+
+
+@media (max-width: 768px) {
+    body {
+        font-size: 0.9em;
+    }
+
+    .contenedor_texto_imagen {
+        grid-template-columns: 1fr;
+    }
+
+    .titulo_principal {
+        font-size: 2em;
+    }
+
+    .titulo_seccion,
+    .texto,
+    .pie_de_pagina {
+        font-size: 0.9em;
+    }
+
+    .imagen1 {
+        max-width: 65%;
+        height: auto;
+        grid-column: span 1;
+        margin: 0 auto;
+    }
+
+    .imagen2 {
+        max-width: 50%;
+        height: auto;
+        grid-column: span 1;
+        margin: 0 auto;
+    }
 }
