--- a/estilos/estiloparidad.css
+++ b/estilos/estiloparidad.css
@@ -143,6 +143,13 @@ body {
         font-size: 2em;
         margin-left: 60px;
     }
+    .head i {
+        margin-top: 10px; /* Añade espacio para separación */
+    }
+    .head {
+        flex-direction: column; /* Reorganiza los elementos verticalmente */
+        align-items: initial;
+    }
 
     .titulo_seccion,
     .texto,
@@ -174,12 +181,12 @@ body {
         left: 0;
         z-index: 1000; /* Asegura que quede sobre el contenido */
         width: 100%; /* Ocupa todo el ancho */
-        height: 200vh; /* Ajusta la altura según el contenido */
+        height: auto; /* Ajusta la altura según el contenido */
     }
 
     .aside.active {
         width: 70px; /* Modo compacto con menor ancho */
-        height: 200vh; /* Ocupa toda la altura en modo activo */
+        height: 100vh; /* Ocupa toda la altura en modo activo */
     }
 
     
