--- a/estilos/estiloindex.css
+++ b/estilos/estiloindex.css
@@ -160,20 +160,16 @@ p{
     /* Ajustar opciones del menú */
     .options div {
         flex-direction: column; /* Opciones en columna */
-        text-align: center; /* Centra el contenido */
+       
     }
 
-    .options img {
-        margin: 0 auto 5px; /* Íconos centrados */
-    }
+    
 
-    .options a {
-        font-size: 1rem; /* Ajustar el tamaño del texto */
-    }
+   
 
     /* Ajustar el contenido principal */
     body {
-        margin-top: 60px; /* Deja espacio para la barra lateral */
+        margin-top: 10px; /* Deja espacio para la barra lateral */
         padding-left: 80px; /* Separa el contenido del lado izquierdo */
     }
 
@@ -190,6 +186,8 @@ p{
         padding: 10px; /* Reduce el espacio interno */
         text-align: left; /* Alinea el texto a la izquierda */
         margin-top: -10px; /* Levanta el título más hacia arriba */
+        text-align: center;
+        margin-left: -25px;
     }
 
     h2 {
