--- a/estilos/estiloinstitu.css
+++ b/estilos/estiloinstitu.css
@@ -1,3 +1,4 @@
+
 /*Paleta de colores:
     Morado: #6A1B9A
     Rosa claro: #FF4081
@@ -6,11 +7,6 @@
     Blanco: #FFFFFF
     Gris oscuro: #333333
 */
-* {
-    box-sizing: border-box;
-}
-
-
 
 body {
     font-family: Arial, sans-serif;
@@ -22,6 +18,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    
 }
 
 .encabezado {
@@ -37,18 +34,18 @@ body {
     margin: 20px 0;
 }
 
-.equidad_de_genero {
+.imagen_paridad {
     max-width: 50%;
     height: auto;
     border-radius: 8px;
 }
 
 .contenido_principal {
+    margin-left: 100px;
     padding: 20px;
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
-    margin-left: 100px;
 }
 
 .titulo_principal {
@@ -59,13 +56,7 @@ body {
 .titulo_seccion {
     color: #6A1B9A;
     margin-bottom: 10px;
-    font-size: 1.4em;
-}
-
-.titulo_seccion_video {
-    color: #6A1B9A;
-    margin-bottom: 10px;
-    font-size: 1.4em;
+    font-size: 2em;
     text-align: center;
 }
 
@@ -95,11 +86,21 @@ body {
     margin: 0;
 }
 
+.lista {
+    padding-left: 30px;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+.elemento_lista {
+    margin-bottom: 10px;
+    color: #6A1B9A;
+}
+
 .texto {
     color: #333333;
     margin-bottom: 10px;
     font-size: 0.9em;
-    text-align: justify;
 }
 
 .subtitulo {
@@ -108,8 +109,11 @@ body {
     margin-top: 10px;
 }
 
-.video {
-    display: flex;
-    margin: 0 auto;
-    margin-bottom: 20px;
+.titulo_seccion2 {
+    color: #6A1B9A;
+    font-size: 1.4em;
+}
+
+.contacto{
+    color: #ad70d3;
 }
