--- a/estilos/estilovideo.css
+++ b/estilos/estilovideo.css
@@ -113,3 +113,105 @@ body {
     margin: 0 auto;
     margin-bottom: 20px;
 }
+
+.completa{
+    justify-content: center;
+    align-items: center;
+    background-color: #ad70d3;
+    padding: 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+.completa:hover{
+    background-color: #6A1B9A;
+    color: #F4F4F4;
+    transition: all 0.3s;
+    
+}
+
+.completa a{
+    text-align: none;
+}
+
+/*RESPONSIVO*/
+@media (max-width: 768px) {
+    body {
+        font-size: 0.9em;
+    }
+
+    .contenedor_texto_imagen {
+        grid-template-columns: 1fr;
+    }
+
+    .titulo_principal {
+        font-size: 2em;
+        margin-left: 60px;
+    }
+    .head i {
+        margin-top: 10px; /* Añade espacio para separación */
+    }
+    .head {
+        flex-direction: column; /* Reorganiza los elementos verticalmente */
+        align-items: initial;
+    }
+
+    .titulo_seccion,
+    .texto,
+    .pie_de_pagina {
+        font-size: 0.9em;
+    }
+
+    .imagen1 {
+        max-width: 65%;
+        height: auto;
+        grid-column: span 1;
+        margin: 0 auto;
+    }
+
+    .imagen2 {
+        max-width: 50%;
+        height: auto;
+        grid-column: span 1;
+        margin: 0 auto;
+    }
+
+    .subtitulo{
+        margin-left: 70px;
+    }
+
+    .aside {
+        position: fixed; /* Fija la barra lateral en la parte superior */
+        top: 0;
+        left: 0;
+        z-index: 1000; /* Asegura que quede sobre el contenido */
+        width: 100%; /* Ocupa todo el ancho */
+        height: 300vh; /* Ajusta la altura según el contenido */
+    }
+
+    .aside.active {
+        width: 50px; /* Modo compacto con menor ancho */
+        height: 300vh; /* Ocupa toda la altura en modo activo */
+    }
+    
+    .texto_pie_de_pagina{
+        padding-left: 60px;
+    }
+    
+    .caja_contenido{
+        
+        padding: 10px;
+        margin-left: -30px;
+        text-align: justify;
+        width: auto;
+    }
+    iframe{
+        width: 150px;
+        height: auto;
+    }
+
+    .texto{
+        text-align: initial;
+    }
+}
